add images and youtube video

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 		  <div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/kristin-wiig.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Ellen Page
+				  Kristin Wiig
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -34,7 +34,7 @@
 
 			<div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/freddie-prinze-jr.jpg">
 			  </div>
 			  <div class="celeb-name">
 				  Freddie Prinze Jr.
@@ -50,10 +50,10 @@
 
 		  <div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/jonah-hill.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Shia LaBoeuf
+				  Jonah Hill
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -66,10 +66,10 @@
 
 			<div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/maisie-williams.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Anna Kendrick
+				  Maisie Williams
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -82,10 +82,10 @@
 
 			<div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/shailene-woodley.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Alexis Bledel
+				  Shailene Woodley
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -98,26 +98,26 @@
 
 		  <div class="quarter character">
 			  <div class="photo">
-				  <img src="img/jay-verburg.jpg">
+				  <img src="img/bfg.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Jay Verburg
+				  The BFG
 			  </div>
 			  <div class="as">
 				  ~ as ~
 			  </div>
 			  <div class="char-name">
-				  Himself
+				  Jay Verburg
 			  </div>
 		  </div>
 
 
 		  <div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/halle-berry.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Haley Berry
+				  Halle Berry
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -130,10 +130,10 @@
 
 		  <div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/zach-galifianakis.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Bill Murray
+				  Zach Galifianakis
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -149,7 +149,7 @@
 				  <img src="img/meryl-streep.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Julia Child (Meryl Streep)
+				  Julia Child (Meryl)
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -162,10 +162,10 @@
 
 		  <div class="quarter character">
 			  <div class="photo">
-				  <img src="img/aubrey-plaza.jpg">
+				  <img src="img/daria.jpg">
 			  </div>
 			  <div class="celeb-name">
-				  Aubrey Plaza
+				  Daria
 			  </div>
 			  <div class="as">
 				  ~ as ~
@@ -178,7 +178,7 @@
 
 		  <div class="quarter character">
 			  <div class="photo">
-				  <img src="img/goldblum.jpg">
+				  <img src="img/jack-black.jpg">
 			  </div>
 			  <div class="celeb-name">
 				  Jack Black
@@ -208,7 +208,11 @@
 	  </div>
 
 
-		<iframe type="text/html" width="560" height="315" src="https://www.youtube.com/embed/8t-iFr9q1I8?rel=0&amp;controls=0&amp;showinfo=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+		<iframe type="text/html" width="560" height="315" src="https://www.youtube.com/embed/m9We2XsVZfc?rel=0&amp;controls=0&amp;showinfo=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/m9We2XsVZfc" frameborder="0" allowfullscreen></iframe>
+
 
   </div>
 </body>
